--- a/src/Components/Sidebar/Sidebar.sass
+++ b/src/Components/Sidebar/Sidebar.sass
@@ -1,9 +1,11 @@
+@use '../../styles/variables' as vars
+
 .sidebar
   width: 250px
-  background: #cabfde
+  background: vars.$color-secondary
   color: #fff
   height: 100vh
-  padding-top: 1rem
+  padding-top: 2rem
   position: fixed
   top: 60px // altura navbar
   left: 0
@@ -30,6 +32,7 @@
 
           &:hover
             background: #957DAD
+            color: #fff
 
       .active
         background: #957DAD
