--- a/src/layout.sass
+++ b/src/layout.sass
@@ -1,10 +1,12 @@
+@use './styles/_variables.sass' as vars
+
 html, body, #root
   margin: 0
   padding: 0
   width: 100%
   height: 100%
   font-family: 'Arial', sans-serif
-  background: #f9f9f9
+  background: vars.$color-background
   scroll-behavior: smooth
 
 .layout-container
@@ -19,13 +21,12 @@ header
   left: 0
   width: 100%
   height: 60px
-  background: #cabfde
+  background: vars.$color-secondary
   z-index: 1000
   display: flex
   align-items: center
-  padding: 0 1rem
-  color: #fff
-  
+  padding: 10px 0
+  color: vars.$color-text-light
 
 main
   display: flex
@@ -36,7 +37,7 @@ main
 .content
   flex: 1
   margin-left: 20% // deja espacio para sidebar
-  padding: 1rem
+  padding: 2rem
   box-sizing: border-box
 
 /* Sidebar fijo */
